==> metriful/sensor/Arduino/Metriful_Sensor/Metriful_sensor.cpp <==
#include "Metriful_sensor.h"
#include "host_pin_definitions.h"
#define ARDUINO_WIRE_BUFFER_LIMIT_BYTES 32

void SensorHardwareSetup(uint8_t i2c_7bit_address) {

  pinMode(LED_BUILTIN, OUTPUT);

  #ifdef ESP8266
    // Must specify the I2C pins
    Wire.begin(SDA_PIN, SCL_PIN); 
    digitalWrite(LED_BUILTIN, HIGH);
  #else
    // Default I2C pins are used
    Wire.begin(); 
    digitalWrite(LED_BUILTIN, LOW);
  #endif
  
  Wire.setClock(I2C_CLK_FREQ_HZ);

  // READY, light interrupt and sound interrupt lines are digital inputs.
  pinMode(READY_PIN, INPUT);
  pinMode(L_INT_PIN, INPUT);
  pinMode(S_INT_PIN, INPUT);

  // Set up interrupt monitoring of the READY signal, triggering on a falling edge 
  // event (high-to-low voltage change) indicating READY assertion. The
  // function ready_ISR() will be called when this happens.
  attachInterrupt(digitalPinToInterrupt(READY_PIN), ready_ISR, FALLING);

  // Start the serial port.
  // Full settings are: 8 data bits, no parity, one stop bit
  Serial.begin(SERIAL_BAUD_RATE);
  
  // Wait for the MS430 to finish power-on initialization:
  while (digitalRead(READY_PIN) == HIGH) {
    yield();
  } 
  
  // Reset to clear any previous state:
  TransmitI2C(i2c_7bit_address, RESET_CMD, 0, 0);
  delay(5);
  
  // Wait for reset completion and entry to standby mode
  while (digitalRead(READY_PIN) == HIGH) {
    yield();
  } 
}

void printAirDataF(const AirData_F_t * airDataF) {
  Serial.print("Temperature = ");
  #ifdef USE_FAHRENHEIT
    float temperature_F = convertCtoF(airDataF->T_C);
    Serial.print(temperature_F,1);Serial.println(" " FAHRENHEIT_SYMBOL);
  #else
    Serial.print(airDataF->T_C,1);Serial.println(" " CELSIUS_SYMBOL);
  #endif
  Serial.print("Pressure = ");Serial.print(airDataF->P_Pa);Serial.println(" Pa");
  Serial.print("Humidity = ");Serial.print(airDataF->H_pc,1);Serial.println(" %");
  Serial.print("Gas Sensor Resistance = ");Serial.print(airDataF->G_Ohm);Serial.println(" " OHM_SYMBOL);
}

void printAirQualityDataF(const AirQualityData_F_t * airQualityDataF) {
  if (airQualityDataF->AQI_accuracy > 0) {
    Serial.print("Air Quality Index = ");Serial.print(airQualityDataF->AQI,1);
    Serial.print(" (");
    Serial.print(interpret_AQI_value((uint16_t) airQualityDataF->AQI));
    Serial.println(")");
    Serial.print("Estimated CO" SUBSCRIPT_2 " = ");Serial.print(airQualityDataF->CO2e,1);
    Serial.println(" ppm");
    Serial.print("Equivalent Breath VOC = ");Serial.print(airQualityDataF->bVOC,2);
    Serial.println(" ppm");
  }
  Serial.print("Air Quality Accuracy: ");
  Serial.println(interpret_AQI_accuracy(airQualityDataF->AQI_accuracy));
}

void printLightDataF(const LightData_F_t * lightDataF) {
  Serial.print("Illuminance = ");Serial.print(lightDataF->illum_lux,2);Serial.println(" lux");
  Serial.print("White Light Level = ");Serial.print(lightDataF->white);Serial.println();
}

void printSoundDataF(const SoundData_F_t * soundDataF) {
  char strbuf[50] = {0};
  Serial.print("A-weighted Sound Pressure Level = ");
  Serial.print(soundDataF->SPL_dBA,1);Serial.println(" dBA");
  for (uint16_t i=0; i<SOUND_FREQ_BANDS; i++) {
    sprintf(strbuf,"Frequency Band %u (%u Hz) SPL = ", i+1, sound_band_mids_Hz[i]);
    Serial.print(strbuf);
    Serial.print(soundDataF->SPL_bands_dB[i],1);Serial.println(" dB");
  }
  Serial.print("Peak Sound Amplitude = ");Serial.print(soundDataF->peakAmp_mPa,2);Serial.println(" mPa");
}

void printParticleDataF(const ParticleData_F_t * particleDataF, uint8_t particleSensor) {
  Serial.print("Particle Duty Cycle = ");Serial.print(particleDataF->duty_cycle_pc,2);Serial.println(" %");
  Serial.print("Particle Concentration = ");
  Serial.print(particleDataF->concentration,2);
  if (particleSensor == PARTICLE_SENSOR_PPD42) {
    Serial.println(" ppL");
  }
  else if (particleSensor == PARTICLE_SENSOR_SDS011) {
    Serial.println(" " SDS011_UNIT_SYMBOL);
  }
  else {
    Serial.println(" (?)");
  }
  Serial.print("Particle data valid: ");
  if (particleDataF->valid) {
    Serial.println("Yes");
  }
  else {
    Serial.println("No (Initializing)");
  }
}

void printAirData(const AirData_t * airData, bool printColumns) {
  char strbuf[50] = {0};
  
  uint8_t T_intPart = 0;
  uint8_t T_fractionalPart = 0;
  bool isPositive = true;
  const char * T_unit = getTemperature(airData, &T_intPart, &T_fractionalPart, &isPositive);
  
  if (printColumns) {
    // Print: temperature, pressure/Pa, humidity/%, gas sensor resistance/ohm 
    sprintf(strbuf,"%s%u.%u %" PRIu32 " %u.%u %" PRIu32 " ",isPositive?"":"-", T_intPart, T_fractionalPart,
            airData->P_Pa, airData->H_pc_int, airData->H_pc_fr_1dp, airData->G_ohm);
    Serial.print(strbuf);
  }
  else {
    sprintf(strbuf,"Temperature = %s%u.%u %s", isPositive?"":"-", T_intPart, T_fractionalPart, T_unit);
    Serial.println(strbuf);
    Serial.print("Pressure = ");Serial.print(airData->P_Pa);Serial.println(" Pa");
    sprintf(strbuf,"Humidity = %u.%u %%",airData->H_pc_int,airData->H_pc_fr_1dp);
    Serial.println(strbuf);
    Serial.print("Gas Sensor Resistance = ");Serial.print(airData->G_ohm);Serial.println(" " OHM_SYMBOL);
  }
}

void printAirQualityData(const AirQualityData_t * airQualityData, bool printColumns) {
  char strbuf[50] = {0};
  if (printColumns) {
    // Print: Air Quality Index, Estimated CO2/ppm, Equivalent breath VOC/ppm, Accuracy
    sprintf(strbuf,"%u.%u %u.%u %u.%02u %u ",airQualityData->AQI_int, airQualityData->AQI_fr_1dp,
            airQualityData->CO2e_int, airQualityData->CO2e_fr_1dp,
            airQualityData->bVOC_int, airQualityData->bVOC_fr_2dp, airQualityData->AQI_accuracy);
    Serial.print(strbuf);
  }
  else {
    if (airQualityData->AQI_accuracy > 0) {
      sprintf(strbuf,"Air Quality Index = %u.%u (%s)",
         airQualityData->AQI_int, airQualityData->AQI_fr_1dp, interpret_AQI_value(airQualityData->AQI_int));
      Serial.println(strbuf);
      sprintf(strbuf,"Estimated CO" SUBSCRIPT_2 " = %u.%u ppm",
                     airQualityData->CO2e_int, airQualityData->CO2e_fr_1dp);
      Serial.println(strbuf);
      sprintf(strbuf,"Equivalent Breath VOC = %u.%02u ppm",
                     airQualityData->bVOC_int, airQualityData->bVOC_fr_2dp);
      Serial.println(strbuf);
    }
    Serial.print("Air Quality Accuracy: ");
    Serial.println(interpret_AQI_accuracy(airQualityData->AQI_accuracy));
  }
}

void printSoundData(const SoundData_t * soundData, bool printColumns) {
  char strbuf[50] = {0};
  if (printColumns) {
    // Print: Sound pressure level/dBA, Sound pressure level for frequency bands 1 to 6 (six columns), 
    //        Peak sound amplitude/mPa, stability 
    sprintf(strbuf,"%u.%u ", soundData->SPL_dBA_int, soundData->SPL_dBA_fr_1dp);
    Serial.print(strbuf);
    for (uint16_t i=0; i<SOUND_FREQ_BANDS; i++) {
      sprintf(strbuf,"%u.%u ", soundData->SPL_bands_dB_int[i], soundData->SPL_bands_dB_fr_1dp[i]);
      Serial.print(strbuf);
    }
    sprintf(strbuf,"%u.%02u %u ", soundData->peak_amp_mPa_int, 
          soundData->peak_amp_mPa_fr_2dp, soundData->stable);
    Serial.print(strbuf);
  }
  else {
    sprintf(strbuf,"A-weighted Sound Pressure Level = %u.%u dBA", 
                   soundData->SPL_dBA_int, soundData->SPL_dBA_fr_1dp);
    Serial.println(strbuf);
    for (uint8_t i=0; i<SOUND_FREQ_BANDS; i++) {
      sprintf(strbuf,"Frequency Band %u (%u Hz) SPL = %u.%u dB", 
          i+1, sound_band_mids_Hz[i], soundData->SPL_bands_dB_int[i], soundData->SPL_bands_dB_fr_1dp[i]);
      Serial.println(strbuf);
    }
    sprintf(strbuf,"Peak Sound Amplitude = %u.%02u mPa", 
                   soundData->peak_amp_mPa_int, soundData->peak_amp_mPa_fr_2dp);
    Serial.println(strbuf);
  }
}

void printLightData(const LightData_t * lightData, bool printColumns) {
  char strbuf[50] = {0};
  if (printColumns) {
    // Print: illuminance/lux, white level
    sprintf(strbuf,"%u.%02u %u ", lightData->illum_lux_int, lightData->illum_lux_fr_2dp, lightData->white);
    Serial.print(strbuf);
  }
  else {
    sprintf(strbuf,"Illuminance = %u.%02u lux", lightData->illum_lux_int, lightData->illum_lux_fr_2dp);
    Serial.println(strbuf);
    Serial.print("White Light Level = ");Serial.print(lightData->white);Serial.println();
  }
}

void printParticleData(const ParticleData_t * particleData, bool printColumns, uint8_t particleSensor) {
  char strbuf[50] = {0};
  if (printColumns) {
    // Print: duty cycle/%, concentration
    sprintf(strbuf,"%u.%02u %u.%02u %u ", particleData->duty_cycle_pc_int, 
                   particleData->duty_cycle_pc_fr_2dp, particleData->concentration_int,
                   particleData->concentration_fr_2dp, particleData->valid);
    Serial.print(strbuf);
  }
  else {
    sprintf(strbuf,"Particle Duty Cycle = %u.%02u %%", 
                   particleData->duty_cycle_pc_int, particleData->duty_cycle_pc_fr_2dp);
    Serial.println(strbuf);
    sprintf(strbuf,"Particle Concentration = %u.%02u ", 
                   particleData->concentration_int, particleData->concentration_fr_2dp);
    Serial.print(strbuf);
    if (particleSensor == PARTICLE_SENSOR_PPD42) {
      Serial.println("ppL");
    }
    else if (particleSensor == PARTICLE_SENSOR_SDS011) {
      Serial.println(SDS011_UNIT_SYMBOL);
    }
    else {
      Serial.println("(?)");
    }
    Serial.print("Particle data valid: ");
    if (particleData->valid == 0) {
      Serial.println("No (Initializing)");
    }
    else {
      Serial.println("Yes");
    }
  }
}

bool TransmitI2C(uint8_t dev_addr_7bit, uint8_t commandRegister, uint8_t data[], uint8_t data_length) {

  if (data_length > ARDUINO_WIRE_BUFFER_LIMIT_BYTES) {
    // The Arduino Wire library has a limited internal buffer size
    return false;
  }

  Wire.beginTransmission(dev_addr_7bit);
  uint8_t bytesWritten = Wire.write(commandRegister);
  if (data_length > 0) {
    bytesWritten += Wire.write(data, data_length); 
  }
  if (bytesWritten != (data_length+1)) {
    return false;
  }

  return (Wire.endTransmission(true) == 0);
}

bool ReceiveI2C(uint8_t dev_addr_7bit, uint8_t commandRegister, uint8_t data[], uint8_t data_length) {

  if (data_length == 0) {
    // Cannot do a zero byte read
    return false;
  }

  if (data_length > ARDUINO_WIRE_BUFFER_LIMIT_BYTES) {
    // The Arduino Wire library has a limited internal buffer size
    return false;
  }

  Wire.beginTransmission(dev_addr_7bit);   
  Wire.write(commandRegister);  
  if (Wire.endTransmission(false) != 0) {
    return false;
  }

  if (Wire.requestFrom(dev_addr_7bit, data_length, (uint8_t) 1) != data_length) {
    // Did not receive the expected number of bytes
    return false;
  }

  for (uint8_t i=0; i<data_length; i++) {
    if (Wire.available() > 0) {
      data[i] = Wire.read();
    }
  }

  return true;
}
