==> TheKaese/MetrifulSensor/ESP-IDF/Examples/cycle_readout/src/Metriful_sensor.cpp <==
#include "Metriful_sensor.h"

void SensorHardwareSetup(uint8_t i2c_7bit_address)
{
  // READY, light interrupt and sound interrupt lines are digital inputs.
  gpio_config_t ready_pin_conf;
  ready_pin_conf.intr_type = GPIO_INTR_ANYEDGE;
  ready_pin_conf.mode = GPIO_MODE_INPUT;
  ready_pin_conf.pin_bit_mask = (1ULL << READY_PIN); //23
  ready_pin_conf.pull_down_en = GPIO_PULLDOWN_DISABLE;
  ready_pin_conf.pull_up_en = GPIO_PULLUP_DISABLE;
  ESP_ERROR_CHECK(gpio_config(&ready_pin_conf));

  gpio_config_t l_int_pint_conf;
  l_int_pint_conf.intr_type = GPIO_INTR_DISABLE;
  l_int_pint_conf.mode = GPIO_MODE_INPUT;
  l_int_pint_conf.pin_bit_mask = (1ULL << L_INT_PIN); //18
  l_int_pint_conf.pull_down_en = GPIO_PULLDOWN_DISABLE;
  l_int_pint_conf.pull_up_en = GPIO_PULLUP_DISABLE;
  ESP_ERROR_CHECK(gpio_config(&l_int_pint_conf));

  gpio_config_t s_int_pint_conf;
  s_int_pint_conf.intr_type = GPIO_INTR_DISABLE;
  s_int_pint_conf.mode = GPIO_MODE_INPUT;
  s_int_pint_conf.pin_bit_mask = (1ULL << S_INT_PIN); //19
  s_int_pint_conf.pull_down_en = GPIO_PULLDOWN_DISABLE;
  s_int_pint_conf.pull_up_en = GPIO_PULLUP_DISABLE;
  ESP_ERROR_CHECK(gpio_config(&s_int_pint_conf));

  // Set up interrupt monitoring of the READY signal, triggering on a falling edge
  // event (high-to-low voltage change) indicating READY assertion. The
  // function ready_ISR() will be called when this happens.
  ESP_ERROR_CHECK(gpio_install_isr_service(ESP_INTR_FLAG_EDGE));
  gpio_isr_handler_add(READY_PIN, &ready_isr, (void *)READY_PIN);

  // Init I2C
  i2c_config_t conf;
  conf.mode = I2C_MODE_MASTER;
  conf.sda_io_num = SDA_PIN; //21
  conf.scl_io_num = SCL_PIN; //22
  conf.sda_pullup_en = GPIO_PULLUP_ENABLE;
  conf.scl_pullup_en = GPIO_PULLUP_ENABLE;
  conf.clk_flags = I2C_SCLK_DEFAULT;
  conf.master.clk_speed = 100000;
  ESP_LOGI(TAG, "I2C Param Config");
  ESP_ERROR_CHECK(i2c_param_config(I2C_NUM_0, &conf));
  ESP_LOGI(TAG, "I2C Driver Install");
  ESP_ERROR_CHECK(i2c_driver_install(I2C_NUM_0, conf.mode, 0, 0, 0));

  ESP_LOGI(TAG, "Waiting for Metriful to finish initialization...");
  // Wait for the MS430 to finish power-on initialization:
  while (gpio_get_level(READY_PIN) > .5)
  {
    vTaskDelay(5 / portTICK_RATE_MS);
  }

  // Reset to clear any previous state:
  uint8_t data = 0;
  TransmitI2C(i2c_7bit_address, RESET_CMD, &data, 1);

  ESP_LOGI(TAG, "Waiting for Metriful reset");
  // Wait for reset completion and entry to standby mode
  while (gpio_get_level(GPIO_NUM_23) > .5)
  {
    vTaskDelay(5 / portTICK_RATE_MS);
  }
  ESP_LOGI(TAG, "Metriful hardware setup complete");
}

bool TransmitI2C(uint8_t dev_addr_7bit, uint8_t commandRegister, uint8_t data[], uint8_t data_length)
{
  i2c_cmd_handle_t cmd = i2c_cmd_link_create();
  ESP_ERROR_CHECK(i2c_master_start(cmd));
  i2c_master_write_byte(cmd, (0x71 << 1) | I2C_MASTER_WRITE, 1);

  if (data_length > 0)
  {
    i2c_master_write(cmd, data, data_length, 1);
  }

  ESP_ERROR_CHECK(i2c_master_stop(cmd));
  ESP_ERROR_CHECK(i2c_master_cmd_begin(I2C_NUM_0, cmd, 1000 / portTICK_PERIOD_MS));
  i2c_cmd_link_delete(cmd);

  return 1;
}

bool ReceiveI2C(uint8_t dev_addr_7bit, uint8_t commandRegister, uint8_t data[], uint8_t data_length)
{
  // Cannot do a zero byte read
  if (data_length == 0)
  {
    return false;
  }

  i2c_cmd_handle_t cmd = i2c_cmd_link_create();
  ESP_ERROR_CHECK(i2c_master_start(cmd));
  ESP_ERROR_CHECK(i2c_master_write_byte(cmd, (dev_addr_7bit << 1) | I2C_MASTER_WRITE, 1 /* expect ack */));
  ESP_ERROR_CHECK(i2c_master_start(cmd));
  ESP_ERROR_CHECK(i2c_master_write_byte(cmd, (dev_addr_7bit << 1) | I2C_MASTER_READ, 1 /* expect ack */));

  ESP_ERROR_CHECK(i2c_master_read(cmd, data, data_length, I2C_MASTER_ACK));

  ESP_ERROR_CHECK(i2c_master_stop(cmd));
  ESP_ERROR_CHECK(i2c_master_cmd_begin(I2C_NUM_0, cmd, 1000 / portTICK_PERIOD_MS));
  i2c_cmd_link_delete(cmd);

  return true;
}

void printAirDataF(const AirData_F_t *airDataF)
{
  ESP_LOGI(TAG, "Temperature = ");
#ifdef USE_FAHRENHEIT
  float temperature_F = convertCtoF(airDataF->T_C);
  ESP_LOGI(TAG, "%f" FAHRENHEIT_SYMBOL "\n", temperature_F);
#else
  ESP_LOGI(TAG, "%f" CELSIUS_SYMBOL "\n", airDataF->T_C);
#endif
  ESP_LOGI(TAG, "Pressure = %d Pa\n", airDataF->P_Pa);
  ESP_LOGI(TAG, "Humidity = %f%%\n", airDataF->H_pc);
  ESP_LOGI(TAG, "Gas Sensor Resistance = %d " OHM_SYMBOL "\n", airDataF->G_Ohm);
}

void printAirQualityDataF(const AirQualityData_F_t *airQualityDataF)
{
  if (airQualityDataF->AQI_accuracy > 0)
  {
    ESP_LOGI(TAG, "Air Quality Index = %f (%s)\n", airQualityDataF->AQI, interpret_AQI_value((uint16_t)airQualityDataF->AQI));
    ESP_LOGI(TAG, "Estimated CO" SUBSCRIPT_2 " = %f ppm\n", airQualityDataF->CO2e);
    ESP_LOGI(TAG, "Equivalent Breath VOC = %f ppm\n", airQualityDataF->bVOC);
  }
  ESP_LOGI(TAG, "Air Quality Accuracy: %s", interpret_AQI_accuracy(airQualityDataF->AQI_accuracy));
}

void printLightDataF(const LightData_F_t *lightDataF)
{
  ESP_LOGI(TAG, "Illuminance = %f lux\n", lightDataF->illum_lux);
  ESP_LOGI(TAG, "White Light Level = %d%%\n", lightDataF->white);
}

void printSoundDataF(const SoundData_F_t *soundDataF)
{
  ESP_LOGI(TAG, "A-weighted Sound Pressure Level = %f dBA\n", soundDataF->SPL_dBA);
  for (uint16_t i = 0; i < SOUND_FREQ_BANDS; i++)
  {
    ESP_LOGI(TAG, "Frequency Band %u (%u Hz) SPL = %f dB\n", i + 1, sound_band_mids_Hz[i], soundDataF->SPL_bands_dB[i]);
  }
  ESP_LOGI(TAG, "Peak Sound Amplitude = %f mPa\n", soundDataF->peakAmp_mPa);
}

void printParticleDataF(const ParticleData_F_t *particleDataF, uint8_t particleSensor)
{
  ESP_LOGI(TAG, "Particle Duty Cycle = %f%%\n", particleDataF->duty_cycle_pc);
  if (particleSensor == PARTICLE_SENSOR_PPD42)
  {
    ESP_LOGI(TAG, "Particle Concentration = %f ppL\n", particleDataF->concentration);
  }
  else if (particleSensor == PARTICLE_SENSOR_SDS011)
  {
    ESP_LOGI(TAG, "Particle Concentration = %f " SDS011_UNIT_SYMBOL "\n", particleDataF->concentration);
  }
  else
  {
    ESP_LOGI(TAG, "Particle Concentration = %f (?)\n", particleDataF->concentration);
  }
  ESP_LOGI(TAG, "Particle data valid: ");
  if (particleDataF->valid)
  {
    ESP_LOGI(TAG, "Yes\n");
  }
  else
  {
    ESP_LOGI(TAG, "No (Initializing)\n");
  }
}

void printAirData(const AirData_t *airData, bool printColumns)
{
  uint8_t T_intPart = 0;
  uint8_t T_fractionalPart = 0;
  bool isPositive = true;
  const char *T_unit = getTemperature(airData, &T_intPart, &T_fractionalPart, &isPositive);

  if (printColumns)
  {
    // Print: temperature, pressure/Pa, humidity/%, gas sensor resistance/ohm
    ESP_LOGI(TAG, "%s%u.%u %" PRIu32 " %u.%u %" PRIu32 "\n", isPositive ? "" : "-", T_intPart, T_fractionalPart,
             airData->P_Pa, airData->H_pc_int, airData->H_pc_fr_1dp, airData->G_ohm);
  }
  else
  {
    ESP_LOGI(TAG, "Temperature = %s%u.%u %s\n", isPositive ? "" : "-", T_intPart, T_fractionalPart, T_unit);
    ESP_LOGI(TAG, "Pressure = %d Pa\n", airData->P_Pa);
    ESP_LOGI(TAG, "Humidity = %u.%u %%\n", airData->H_pc_int, airData->H_pc_fr_1dp);
    ESP_LOGI(TAG, "Gas Sensor Resistance = %d " OHM_SYMBOL "\n", airData->G_ohm);
  }
}

void printAirQualityData(const AirQualityData_t *airQualityData, bool printColumns)
{
  if (printColumns)
  {
    // Print: Air Quality Index, Estimated CO2/ppm, Equivalent breath VOC/ppm, Accuracy
    ESP_LOGI(TAG, "%u.%u %u.%u %u.%02u %u\n", airQualityData->AQI_int, airQualityData->AQI_fr_1dp,
             airQualityData->CO2e_int, airQualityData->CO2e_fr_1dp,
             airQualityData->bVOC_int, airQualityData->bVOC_fr_2dp, airQualityData->AQI_accuracy);
  }
  else
  {
    if (airQualityData->AQI_accuracy > 0)
    {
      ESP_LOGI(TAG, "Air Quality Index = %u.%u (%s)\n", airQualityData->AQI_int, airQualityData->AQI_fr_1dp, interpret_AQI_value(airQualityData->AQI_int));
      ESP_LOGI(TAG, "Estimated CO" SUBSCRIPT_2 " = %u.%u ppm\n", airQualityData->CO2e_int, airQualityData->CO2e_fr_1dp);
      ESP_LOGI(TAG, "Equivalent Breath VOC = %u.%02u ppm\n", airQualityData->bVOC_int, airQualityData->bVOC_fr_2dp);
    }
    ESP_LOGI(TAG, "Air Quality Accuracy: %s\n", interpret_AQI_accuracy(airQualityData->AQI_accuracy));
  }
}

void printSoundData(const SoundData_t *soundData, bool printColumns)
{
  if (printColumns)
  {
    // Print: Sound pressure level/dBA, Sound pressure level for frequency bands 1 to 6 (six columns),
    //        Peak sound amplitude/mPa, stability
    ESP_LOGI(TAG, "%u.%u\n", soundData->SPL_dBA_int, soundData->SPL_dBA_fr_1dp);
    for (uint16_t i = 0; i < SOUND_FREQ_BANDS; i++)
    {
      ESP_LOGI(TAG, "%u.%u\n", soundData->SPL_bands_dB_int[i], soundData->SPL_bands_dB_fr_1dp[i]);
    }
    ESP_LOGI(TAG, "%u.%02u %u\n", soundData->peak_amp_mPa_int, soundData->peak_amp_mPa_fr_2dp, soundData->stable);
  }
  else
  {
    ESP_LOGI(TAG, "A-weighted Sound Pressure Level = %u.%u dBA\n", soundData->SPL_dBA_int, soundData->SPL_dBA_fr_1dp);
    for (uint8_t i = 0; i < SOUND_FREQ_BANDS; i++)
    {
      ESP_LOGI(TAG, "Frequency Band %u (%u Hz) SPL = %u.%u dB", i + 1, sound_band_mids_Hz[i], soundData->SPL_bands_dB_int[i], soundData->SPL_bands_dB_fr_1dp[i]);
    }
    ESP_LOGI(TAG, "Peak Sound Amplitude = %u.%02u mPa", soundData->peak_amp_mPa_int, soundData->peak_amp_mPa_fr_2dp);
  }
}

void printLightData(const LightData_t *lightData, bool printColumns)
{
  if (printColumns)
  {
    // Print: illuminance/lux, white level
    ESP_LOGI(TAG, "%u.%02u %u\n", lightData->illum_lux_int, lightData->illum_lux_fr_2dp, lightData->white);
  }
  else
  {
    ESP_LOGI(TAG, "Illuminance = %u.%02u lux\n", lightData->illum_lux_int, lightData->illum_lux_fr_2dp);
    ESP_LOGI(TAG, "White Light Level = %d\n", lightData->white);
  }
}

void printParticleData(const ParticleData_t *particleData, bool printColumns, uint8_t particleSensor)
{
  if (printColumns)
  {
    // Print: duty cycle/%, concentration
    ESP_LOGI(TAG, "%u.%02u %u.%02u %u\n", particleData->duty_cycle_pc_int,
             particleData->duty_cycle_pc_fr_2dp, particleData->concentration_int,
             particleData->concentration_fr_2dp, particleData->valid);
  }
  else
  {
    ESP_LOGI(TAG, "Particle Duty Cycle = %u.%02u %%\n", particleData->duty_cycle_pc_int, particleData->duty_cycle_pc_fr_2dp);
    if (particleSensor == PARTICLE_SENSOR_PPD42)
    {
      ESP_LOGI(TAG, "Particle Concentration = %u.%02u ppL\n", particleData->concentration_int, particleData->concentration_fr_2dp);
    }
    else if (particleSensor == PARTICLE_SENSOR_SDS011)
    {
      ESP_LOGI(TAG, "Particle Concentration = %u.%02u " SDS011_UNIT_SYMBOL "\n", particleData->concentration_int, particleData->concentration_fr_2dp);
    }
    else
    {
      ESP_LOGI(TAG, "Particle Concentration = %u.%02u (?)\n", particleData->concentration_int, particleData->concentration_fr_2dp);
    }
    ESP_LOGI(TAG, "Particle data valid: ");
    if (particleData->valid == 0)
    {
      ESP_LOGI(TAG, "No (Initializing)\n");
    }
    else
    {
      ESP_LOGI(TAG, "Yes\n");
    }
  }
}
